feat(stats): ETF 벤치마크 비교를 일별 granularity로 계산
ETF 일별 종가를 월말로 다운샘플링해 아파트(월별)와 같은 월 단위 교집합
로직에 억지로 맞추던 구조를 개선. BenchmarkGranularity(MONTHLY/DAILY)를
도입해 아파트는 월별, ETF는 거래일별 그대로 비교하도록 분리했다.

- MonthlyReturnCalculator: 이미 일별로 복리 계산하던 투자지수를 granularity에
  따라 월별 또는 일별로 수집하도록 분기
- HousingBenchmarkComparisonBuilder: 공통일 교집합·수익률 계산·연율화를
  월/일 granularity별로 분기, 인접 검사는 DAILY에서 생략
- IndexPriceMonthlyDownsampler 제거(ETF 경로 미사용)
- 응답 필드를 baseMonth/monthCount/investmentMonthlyReturn 등 월 전제
  이름에서 baseDate/pointCount/investmentPeriodReturn 등 범용 이름으로
  리네임 (OpenAPI breaking change, KB Land 원본 시세 series 엔드포인트는
  진짜 월별이라 baseMonth 유지)